# bitcoin-augur-rust

./: .gitignore  Cargo.toml  IMPLEMENTATION_NOTES.md  PLAN.md  README.md  ROADMAP.md  STATUS.md  TEST_REPORT.md  deny.toml  flake.nix  run-kotlin-with-cookie.sh  tarpaulin.toml
.cargo/: audit.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  docker.yml  matrix-test.yml  regression.yml  release.yml  rust.yml  security.yml  test.yml
bitcoin-augur/: Cargo.toml
bitcoin-augur-integration-tests/: Cargo.toml  README.md
bitcoin-augur-integration-tests/src/: cli.rs  main.rs
bitcoin-augur-integration-tests/src/api/: client.rs  mod.rs  models.rs
bitcoin-augur-integration-tests/src/comparison/: diff.rs  fee_compare.rs  mod.rs
bitcoin-augur-integration-tests/src/parity/: helpers.rs  mock_rpc.rs  mod.rs  scenarios.rs  snapshot_generator.rs  test_data.rs
bitcoin-augur-integration-tests/src/report/: mod.rs
bitcoin-augur-integration-tests/src/server/: kotlin_server.rs  mod.rs  rust_server.rs
bitcoin-augur-integration-tests/src/tests/: advanced.rs  basic.rs  mod.rs
bitcoin-augur-regression-tests/: Cargo.toml
bitcoin-augur-regression-tests/src/: api_client.rs  compatibility.rs  main.rs  runner.rs  server.rs  snapshots.rs  stress.rs  test_cases.rs  test_vectors.rs
bitcoin-augur-regression-tests/src/mock_rpc/: mod.rs
bitcoin-augur-regression-tests/src/snapshots/: bitcoin_augur_regression_tests__snapshots__fee_estimates.snap  bitcoin_augur_regression_tests__snapshots__fee_estimates_target_12.snap  bitcoin_augur_regression_tests__snapshots__fee_estimates_target_144.snap  bitcoin_augur_regression_tests__snapshots__fee_estimates_target_24.snap  bitcoin_augur_regression_tests__snapshots__fee_estimates_target_3.snap  bitcoin_augur_regression_tests__snapshots__fee_estimates_target_6.snap
bitcoin-augur-server/: Cargo.toml
bitcoin-augur-server/config/: default.yaml  test.yaml
bitcoin-augur-server/src/: cli.rs  config.rs  lib.rs  main.rs  server.rs
bitcoin-augur-server/src/api/: error.rs  fee_endpoint.rs  fee_endpoint_tests.rs  historical.rs  mod.rs  models.rs
bitcoin-augur-server/src/bitcoin/: mock_client.rs  mod.rs  rpc_client.rs  traits.rs
bitcoin-augur-server/src/persistence/: mod.rs  snapshot_store.rs
bitcoin-augur-server/src/service/: mempool_collector.rs  mempool_collector_tests.rs  mod.rs
bitcoin-augur-server/tests/: api_integration_test.rs
bitcoin-augur/benches/: fee_estimation_bench.rs
bitcoin-augur/scripts/: coverage.sh
bitcoin-augur/src/: error.rs  fee_estimate.rs  fee_estimator.rs  lib.rs  mempool_snapshot.rs  mempool_transaction.rs
bitcoin-augur/src/internal/: bucket_creator.rs  fee_calculator.rs  inflow_calculator.rs  mod.rs  snapshot_array.rs
bitcoin-augur/tests/: algorithm_tests.rs  behavior_tests.rs  debug_inflow_calculation.rs  debug_large_mempool.rs  debug_probability_bug.rs  debug_simple_data.rs  edge_cases_tests.rs  error_handling_tests.rs  fee_estimation_tests.rs  kotlin_parity_tests.rs  numerical_precision_tests.rs  property_tests.proptest-regressions  property_tests.rs  regression_test_probability_ordering.rs  stress_tests.rs  test_poisson_logic.rs  test_utils.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: api_input_validation.rs  fee_calculation.rs  rpc_response_parsing.rs  snapshot_parsing.rs
scripts/: run_fuzz_tests.sh
test-data/rust-server/: test-config.yaml
