[workspace]
members = ["bitcoin-augur", "bitcoin-augur-server", "bitcoin-augur-regression-tests"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Bitcoin Augur Contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/block/bitcoin-augur-rust"
homepage = "https://github.com/block/bitcoin-augur-rust"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"

# Numerical and statistical
ndarray = { version = "0.16", features = ["serde"] }
statrs = "0.17"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP and networking
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Configuration
config = { version = "0.14", features = ["yaml"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

# For static builds
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

[profile.bench]
opt-level = 3