[package]
name = "bitcoin-augur-regression-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "bitcoin-augur-regression-tests"
path = "src/main.rs"

[dependencies]
# Core Bitcoin Augur library
bitcoin-augur = { path = "../bitcoin-augur" }

# CLI and async runtime
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true, features = ["full", "process"] }
async-trait = "0.1"

# HTTP client and JSON
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
tempfile = "3.23"
which = "8.0"
colored = "3.0"
chrono = { workspace = true }

# For floating point comparison
float-cmp = "0.10"

# For concurrent tests
futures = "0.3"

# For random number generation
rand = "0.9"

# For snapshot testing
insta = { version = "1.43", features = ["json", "redactions"] }

# For test execution
assert-json-diff = "2.0"

# For mock RPC server
axum = "0.8"

[dev-dependencies]
