[package]
name = "bitcoin-augur-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP server for Bitcoin Augur fee estimation service"

[lib]
name = "bitcoin_augur_server"
path = "src/lib.rs"

[[bin]]
name = "bitcoin-augur-server"
path = "src/main.rs"

[dependencies]
# Core library
bitcoin-augur = { path = "../bitcoin-augur" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client for Bitcoin RPC
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Configuration
config = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
tower = { workspace = true }