[package]
name = "bitcoin-augur-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP server for Bitcoin Augur fee estimation service"

[lib]
name = "bitcoin_augur_server"
path = "src/lib.rs"

[[bin]]
name = "bitcoin-augur-server"
path = "src/main.rs"

[dependencies]
# Core library
bitcoin-augur = { path = "../bitcoin-augur" }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client for Bitcoin RPC
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Configuration
config = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# System directories
dirs = "5.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = "0.22"

[dev-dependencies]
# Mocking
faux = "0.1"
mockito = "1.2"
wiremock = "0.6"

# Test utilities
tempfile = "3.8"
tower = { workspace = true }
serial_test = "3.1"
pretty_assertions = "1.4"