[package]
name = "bitcoin-augur"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bitcoin fee estimation library using statistical modeling of mempool data"
keywords = ["bitcoin", "fee", "estimation", "mempool", "cryptocurrency"]
categories = ["cryptography::cryptocurrencies", "algorithms"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
statrs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }